Edited cluster analysis section

--- a/leadership_across_cultures_contexts.Rmd
+++ b/leadership_across_cultures_contexts.Rmd
@@ -152,7 +152,7 @@ For additional details on ethnographic sampling and creation of the *leadershipd
 
 We analyzed data from our researcher-coded operationalized variables at the text-record level and at the culture-level. Our first goal was to assess the proportion of text records and cultures that provided evidence for each of our coded variables to discover the qualities, functions, benefits and costs of leadership that are most and least frequently noted in the ethnographic record. We computed confidence intervals for the proportion of text records supporting each variable using generalized linear mixed effects models and random intercepts based on document authors nested within cultures (which partially accounts for potential variation due to differences in ethnographers such as gender, nationality, or theoretical framework). We computed confidence intervals for the proportion of cultures with evidence for each variable using a cluster bootstrap.
 
-We then explored "features" in our data. There are numerous approaches to detecting features in matrix data such as ours, many of which employ various dimensionality reduction and clustering techniques. We used hierarchical cluster analysis on our quality and function variables. We computed distance between our binary vectors using both $1-cor(x, y)$ and asymmetric binary distance (Jaccard distance), and agglomerated using the Ward algorithm. We assessed the robustness of the clusters using the pvclust package [@suzuki_pvclust2006], which computes an unbiased probability that a cluster appears in bootstrapped samples. We used 10,000 bootstrapped samples.
+We then explored "features" in our data. There are numerous approaches to detecting features in matrix data such as ours, many of which employ various dimensionality reduction and clustering techniques. We used hierarchical cluster analysis on our quality and function variables. We computed distance between our binary vectors using both $1-cor(x, y)$ (so that the distance between highly correlated variables is close to $0$, the distance between uncorrelated variables is close to $1$, and the distance between negatively correlated variables is close to $2$), and asymmetric binary distance (Jaccard distance), and agglomerated using the Ward algorithm. We assessed the robustness of the clusters using the pvclust package [@suzuki_pvclust2006], which computes an unbiased probability that a cluster appears in bootstrapped samples. We used 10,000 bootstrapped samples.
 
 <!-- To reduce the dimensionality of the `r length(quality_vars)` leader quality variables and the `r length(function_vars)` leader function variables, all of which take binary values (0, 1), we used logistic PCA from the logisticPCA package. This algorithm projects the natural parameters of the saturated model onto the lower $k-$dimension space that minimizes the Bernoulli deviance [@logisticPCA]. Prior to analysis we removed all rows that had no evidence for any variable, which resulted in `r nrow(pca_data_qualities)` text records for the leader quality variables and `r nrow(pca_data_functions)` text records for the leader function variables. We used cross-validation to optimize rank, $k$, and a tuning parameter, $m$ (the value to approximate the saturated model), per recommendation of the package authors. -->
 
@@ -227,8 +227,6 @@ The most common *qualities* of leaders are being of high social status (document
 
 ## Cluster analyses
 
-Within each cluster analyses, we computed the distance between two variables as $1 - cor (v_i, v_j)$, so that the distance between highly correlated variables is close to $0$, the distance between uncorrelated variables is close to $1$, and the distance between negatively correlated variables is close to $2$. Using the pvclust package [@suzuki_pvclust2006] we clustered the variables using the matrix of all pairwise distances using the Ward agglomeration algorithm. 
-
 Figure \@ref(fig:cluster)A displays a dendrogram from the cluster analysis of the `r length(quality_vars)` leader quality variables and Figure \@ref(fig:cluster)B displays a dendrogram from the cluster analysis of the `r length(function_vars)` leader function variables. Each cluster analysis includes two estimates of significance for how strongly each cluster within the dendrogram is supported by the data. We rely on the AU (Approximately Unbiased) *p* values, which are computed by multiscale bootstrap resampling and represented as percentages (e.g., clusters with AU values $>95$ are strongly supported, and the top-level clusters are automatically highlighted by rectangles).
 
 ```{r cluster, fig.cap="Cluster analysis of leader quality variables (left) and leader function variables (right). Distances are $1 - cor$. Ward agglomeration method. AU p-values (red) computed with 10,000 bootstrap samples using the pvclust package [@pvclust2015]."}
@@ -237,11 +235,11 @@ Figure \@ref(fig:cluster)A displays a dendrogram from the cluster analysis of th
 knitr::include_graphics("Figures/m_pvclust.both.png")
 ```
 
-The leader quality cluster analysis (Figure \@ref(fig:cluster)A) identified two top-level clusters. Within each top-level cluster we identify two interpretable and generally strongly supported sub-clusters which are annotated with text. Within the first top-level cluster, we identify a dominant/shaman cluster, which suggests a strong link between dominance-based leadership (i.e., *Authority*, *Aggressiveness*, *Feared*) and shamanism (i.e., *Supernatural*, *Artistic performance*). The second sub-cluster includes qualities of leaders related to material, social, and reproductive success (i.e., *Wealthy*, *Social contacts*, and *Polygynous*). Within the second top-level, we identify a sub-cluster of positive personal characteristics (i.e., *Knowledgeable/intelligent*, *Proper behavior*, *Charisma*, *Fairness*) and a sub-cluster of measures related to social strategies and health (i.e., *Strategic planner*, *Generosity*, *Physically formidable*). 
+The leader quality cluster analysis (Figure \@ref(fig:cluster)A) identified two top-level clusters, one that comprised mostly variables related to material, social, and reproductive success, and one that comprised mostly variables indicating the relationship between leaders and their groups, which we term *social orientation*. Within the latter top-level cluster we identify two interpretable though weakly supported sub-clusters which are annotated with text. Within the first top-level cluster, we identify a subcluster mainly comprising variables related to the ability to provide social benefits, and a subcluster mainly comprising variables related to the ability to impose social costs.
 
-The leader functions cluster analysis (Figure \@ref(fig:cluster)B) also identified two top-level clusters; the larger of which we identify as an organizational functions cluster (i.e., *Organize cooperation*, *Military command*, *Resolve conflict*) and the smaller a prosociality cluster (i.e., *Social functions*, *Distribute resources*, *Hospitality*). 
+The leader functions cluster analysis (Figure \@ref(fig:cluster)B) also identified two top-level clusters; the larger of which we identify as a management functions cluster (i.e., *Organize cooperation*, *Military command*, *Resolve conflict*) and the smaller a prosociality cluster (i.e., *Social functions*, *Distribute resources*, *Hospitality*). Within the management cluster, we identified a mediation subcluster (e.g., *Resolve conflict*, *Provide counsel*), and a an organization subcluster (e.g., *Organize cooperation*, *Military command*).
 
-
+In naming the clusters and subclusters, we gave extra weight to variables that were strongly supported in the ethnographic record (Figure \@ref(fig:varsupport)), and therefore not all variables within these clusters were clearly related to the themes we identified.
 
 ## Benefits and costs of leadership and followership
 
