Editing discussions sections on group types, qualities, and functions

--- a/Leader2.bib
+++ b/Leader2.bib
@@ -6397,7 +6397,7 @@ This article is part of the theme issue ‘Interdisciplinary approaches for unco
 }
 
 @article{smith_leadership_2016,
-	title = {Leadership in {Mammalian} {Societies}: {Emergence}, {Distribution}, {Power}, and {Payoff}.},
+	title = {Leadership in Mammalian Societies: {Emergence}, Distribution, Power, and Payoff.},
 	volume = {31},
 	issn = {1872-8383},
 	doi = {10.1016/j.tree.2015.09.013},
