Adding citations in discussion sections.

--- a/Leader2.bib
+++ b/Leader2.bib
@@ -4102,6 +4102,50 @@ This article is part of the theme issue ‘Interdisciplinary approaches for unco
 	file = {Emergent%20leadership%20in%20small,:/Users/hagen/Zotero/storage/F96B3B39/Emergent leadership in small,.pdf:application/pdf}
 }
 
+
+
+@article{sinclair_sexuality_1995,
+	title = {Sexuality in leadership},
+	volume = {1},
+	number = {2},
+	journal = {International review of women and leadership},
+	author = {Sinclair, Amanda},
+	year = {1995},
+	pages = {25--38},
+	file = {Full Text:/Users/zgarf/Zotero/storage/BQM683UL/Sinclair - 1995 - Sexuality in leadership.pdf:application/pdf}
+}
+
+
+@article{tietjen_moral_1985,
+	title = {Moral reasoning and leadership among men in a {Papua} {New} {Guinea} society.},
+	volume = {21},
+	journal = {Developmental Psychology},
+	author = {Tietjen, Anne M. and Walker, Lawrence J.},
+	year = {1985},
+	keywords = {MA\_leadership, prelims, Ethnography/Egalitarianism, Leadership},
+	pages = {982},
+	annote = {The following values have no corresponding Zotero field:number: 6publisher: American Psychological Associationissn: coden: doi: citation-id: Tietjen 1985modified-date: 2017-01-18 23:36:40 +0700},
+	file = {Moral%20reasoning%20and%20leadership:/Users/zgarf/Zotero/storage/2FEMSL4W/Moral reasoning and leadership.pdf:application/pdf}
+}
+
+@article{altemeyer_sexual_1974,
+	title = {Sexual identity, physical attractiveness and seating position as determinants of influence in discussion groups.},
+	volume = {6},
+	number = {4},
+	journal = {Canadian Journal of Behavioural Science/Revue canadienne des sciences du comportement},
+	author = {Altemeyer, Robert A. and Jones, Keith},
+	year = {1974},
+	pages = {357}
+}
+
+@book{march_leadership_2009,
+	title = {On leadership},
+	publisher = {John Wiley \& Sons},
+	author = {March, James G. and Weil, Thierry},
+	year = {2009},
+	file = {Full Text:/Users/zgarf/Zotero/storage/4LY5QJUM/2006-06.html:text/html;Snapshot:/Users/zgarf/Zotero/storage/SZMSXLMP/books.html:text/html}
+}
+
 @article{crockford_urinary_2013,
 	title = {Urinary oxytocin and social bonding in related and unrelated wild chimpanzees.},
 	volume = {280},
