--- a/leadership_across_cultures_contexts.Rmd
+++ b/leadership_across_cultures_contexts.Rmd
@@ -317,7 +317,7 @@ Across a broad range of cultures and social contexts leaders are nearly universa
 
 ### Variable dimensions
 
-Several functions and qualities that are theoretically important were relatively rare in the ethnographic record. In the literature on leadership among non-human animals, for example, leaders commonly initiate group movement [@couzin_effective_2005], and "movement" was one of four leadership dimensions that @smith_leadership_2016 identified as comparable among humans and non-human animals, yet movement or migration was identified as a leader function in only `r movement_pct`% of cultures. Several theories of leadership also emphasize the moral authority of leaders [e.g., @xx; @yy], yet leaders were seen as sources of moral authority or "fair" in only a minority of cultures (`r moral_pct`% and `r fairness_pct`% of cultures, respectively). The "Dominance" theory of leadership [@xx; @yy] emphasizes leaders' ability to instill fear, but in only `r feared_pct`% of cultures were leaders characterized as feared. Finally, a large literature on leadership in industrialized societies highlights the attractiveness of leaders, but leaders were characterized as attractive in only `r attractive_pct`% of cultures.
+Several functions and qualities that are theoretically important were relatively rare in the ethnographic record. In the literature on leadership among non-human animals, for example, leaders commonly initiate group movement [@couzin_effective_2005], and "movement" was one of four leadership dimensions that @smith_leadership_2016 identified as comparable among humans and non-human animals, yet movement or migration was identified as a leader function in only `r movement_pct`% of cultures. Several theories of leadership also emphasize the moral authority of leaders [e.g., @henrich_big_2015; @henrich_evolution_2001; @richerson_tribal_2009; @tietjen_moral_1985; @boggild_evolved_2016], yet leaders were seen as sources of moral authority or "fair" in only a minority of cultures (`r moral_pct`% and `r fairness_pct`% of cultures, respectively). The "Dominance" theory of leadership [e.g., @chapais_competence_2015; @cheng_dominance_2019:1; @cheng_pride_2010; @henrich_evolution_2001; @tiger_imperial_1971] emphasizes leaders' ability to instill fear, but in only `r feared_pct`% of cultures were leaders characterized as feared. Finally, a large literature on leadership in industrialized societies highlights the attractiveness of leaders [e.g., @sinclair_sexuality_1995; @altemeyer_sexual_1974; @leadership], but leaders were characterized as attractive in only `r attractive_pct`% of cultures.
 
 ## Clusters of leader functions and qualities
 
